fix: TLP pane subtitle style messed up in xref field
Part of request #40084: tlp-pane-title style messed up in xref field
Part of request #40065: Table report and artifact view should render
Text fields titles appropriately

How to test:
H2 title for tlp-pane-subtitle class in cross-references field should be
0.8125rem. For example, with git commits referencing an artifact, the
name of the git repository is an h2 with that class.

No change in the size of headings used in text fields in the following
cases:
* Artifact view
* Report table renderer view
* Report cardwall renderer view (when text field is in card fields
  semantic)
* Artifact tooltip (when text field is in tooltip semantic)

Notes:
Using the more precise -text class avoids targetting cross-ref field
(and all other kinds of fields). Therefore, we no longer need to filter
out tlp-pane-title.

Follow-up of git #tuleap/stable/d70fddca58c1e69390a0edee25821056c711c178
and git #tuleap/stable/dc9e1dd0e87a8ff43150e84f4d36cf35b70b0972

--- a/plugins/tracker/themes/default/css/style.scss
+++ b/plugins/tracker/themes/default/css/style.scss
@@ -1324,9 +1324,9 @@ div.tracker-admin-field-controls {
 }
 
 .card-details,
-.tracker_artifact_field,
+.tracker_artifact_field-text,
 .tracker_report_table {
-    h1:not(.tlp-pane-title) {
+    h1 {
         font-size: 1.8em;
     }
 
